k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: muhammadwaqas366/devops-client:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80 # <--- CHANGE THIS TO 80 (Nginx port)
        # Remove the entire 'env' section below, it's no longer needed for runtime
        # env:
        #   - name: REACT_APP_BACKEND_URL
        #     value: "http://backend-service:80"
